# WaterWorks-Academy

./: app.py  database.py  dump.sql  models.py  pyproject.toml  replit.nix  requirements.txt
templates/: about.html  category.html  contact.html  course-detail.html  course-list.html  index.html  lesson-view.html  login.html  module-view.html  register.html  sample.html
