[tool.poetry]
name = "repl-nix-waterworks-academy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_waterworks_academy"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.6.0"
flask-mysqldb = "^2.0.0"
sqlalchemy = "^2.0.29"
werkzeug = "^3.0.3"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
